Fixed z-index of channel picture tooltips

--- a/html-css-course/styles/video.css
+++ b/html-css-course/styles/video.css
@@ -97,6 +97,7 @@
   transition: opacity 0.15s;
   pointer-events: none;
   align-items: center;
+  z-index: 1000;
 }
 
 .tooltip-info-container {
